--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <label>
                 <input type="date" name="dia_registro" class="data_registro">
             </label>
-            <label class="radios">
+            <div class="radios">
                 <input type="radio" name="tipo_registro" value="1"> Entrada
                 <input type="radio" name="tipo_registro" value="2"> Saida
-            </label>
+            </div>
             <label>
                 Digite a Hora:
                 <input type="time">
