--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <label>
                 Digite a Hora:
-                <input type="time">
+                <input type="time" name="hora_registro">
             </label>
             <button type="submit" id="registerPonto">
                 Registrar Ponto
