--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <label>
                 Digite a Hora:
-                <input type="time" id="hora_registro" name="hora_registro">
+                <input type="time" id="hora_registro" name="hora_registro" placeholder="00:00">
             </label>
             <button type="submit" id="registerPonto">
                 Registrar Ponto
