--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./assets/js/sw.js');
+          navigator.serviceWorker.register('./sw.js');
         });
       }
     </script>
