--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RegPoint</title>
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="manifest" href="manifest.json">
     <script src="assets/js/dexie.min.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
