--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="manifest" href="./manifest.json">
     <script src="assets/js/dexie.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
@@ -39,8 +40,14 @@
                 Registrar Ponto
             </button>
         </form>
+        
         <h2>Seus Registros:</h2>
         <div id="registrosBox"></div>
+        <br />
+        <button type="submit" id="exportButton" onclick="gerarPDF()">
+            Exportar Dados
+        </button>
+
     </div>
 
     <script src="assets/js/index.js"></script>
