--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     </div>
 
-    <span>Desenvolvido por Igor Eliseo.</span>
+    <span class="copyright">Desenvolvido por Igor Eliseo.</span>
     <script src="assets/js/index.js"></script>
 </body>
 </html>
