adicionei botao folga

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             </button>
         </form>
         
+        <button type="submit" id="addFolgaBtn" onclick="addFolga()">
+            Folga
+        </button>
+
         <h2>Seus Registros:</h2>
         <div id="registrosBox"></div>
         <br />
